@@ -1,6 +1,5 @@
 package com.shop.product.services;
 
-import com.shop.product.components.AmazonS3Client;
 import com.shop.product.dto.ProductDto;
 import com.shop.product.model.Product;
 import com.shop.product.repository.ProductRepository;
@@ -9,24 +8,21 @@ import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Service;
 import org.springframework.web.multipart.MultipartFile;
 
+import java.util.ArrayList;
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
-import java.util.stream.IntStream;
 
 @Service
 @AllArgsConstructor
 @Slf4j
 public class ProductServiceImpl implements ProductService {
 
-    private final AmazonS3Client amazonS3Client;
     private final ProductRepository productRepository;
+    private final FileService fileService;
 
     @Override
     public Boolean createProduct(List<MultipartFile> photos, ProductDto productDto) {
-        if (photos == null || photos.isEmpty()) {
-            throw new IllegalArgumentException("No photos provided for the product.");
-        }
+        validatePhotos(photos);
 
         Product product = buildProductFromDto(photos, productDto);
         productRepository.save(product);
@@ -44,8 +40,28 @@ public class ProductServiceImpl implements ProductService {
         return productRepository.findById(id);
     }
 
+    @Override
+    public Boolean deleteById(String id) {
+        Optional<Product> optionalProduct = productRepository.findById(id);
+        if (optionalProduct.isEmpty()) {
+            return false;
+        }
+
+        Product product = optionalProduct.get();
+        List<String> photoUrls = gatherPhotoUrls(product);
+
+        boolean photosDeleted = fileService.deleteFiles(photoUrls);
+        if (!photosDeleted) {
+            return false;
+        }
+
+        productRepository.deleteById(id);
+        log.info("Product deleted: {}", id);
+        return true;
+    }
+
     private Product buildProductFromDto(List<MultipartFile> photos, ProductDto productDto) {
-        String previewPhotoUrl = uploadPhotoAndGetUrl(photos.get(0));
+        String previewPhotoUrl = fileService.uploadPhoto(photos.get(0));
         List<String> listOfPhotos = buildListOfPhotosUrls(photos);
 
         return Product.builder()
@@ -57,21 +73,25 @@ public class ProductServiceImpl implements ProductService {
                 .build();
     }
 
-    private String uploadPhotoAndGetUrl(MultipartFile photo) {
-        if (photo == null) {
-            throw new IllegalArgumentException("Photo cannot be null.");
-        }
-        String photoUrl = amazonS3Client.uploadPhoto(photo);
-        log.info("Uploaded photo: {}", photoUrl);
-        return photoUrl;
+    private List<String> gatherPhotoUrls(Product product) {
+        List<String> photoUrls = new ArrayList<>();
+        photoUrls.add(product.getPreviewPhoto());
+        photoUrls.addAll(product.getListOfPhotos());
+        return photoUrls;
     }
 
     private List<String> buildListOfPhotosUrls(List<MultipartFile> photos) {
         if (photos.size() > 1) {
-            return IntStream.range(1, photos.size())
-                    .mapToObj(i -> uploadPhotoAndGetUrl(photos.get(i)))
-                    .collect(Collectors.toList());
+            return photos.subList(1, photos.size()).stream()
+                    .map(fileService::uploadPhoto)
+                    .toList();
         }
         return List.of();
+    }
+
+    private void validatePhotos(List<MultipartFile> photos) {
+        if (photos == null || photos.isEmpty()) {
+            throw new IllegalArgumentException("No photos provided for the product.");
+        }
     }
 }
